修改文件内容

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         git init 创建git仓库
         git commit -m "新建了index.html文件"      提交
         git add  开始跟踪 已修改加入暂存区
+
+        撤销对文件的修改
      -->
 </body>
 </html>
