--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         git commit -m "新建了index.html文件"      提交
         git add  开始跟踪 已修改加入暂存区
 
-        撤销对文件的修改
+        撤销对文件的修改 git checkout -- index.html
      -->
 </body>
 </html>
