--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <!-- 
@@ -13,6 +14,9 @@
         git add  开始跟踪 已修改加入暂存区
 
         撤销对文件的修改 git checkout -- index.html
+         git add . 添加所有文件
      -->
+     <h1>h1标题</h1>
+     <script src="./index.js"></script>
 </body>
 </html>
