--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         撤销对文件的修改 git checkout -- index.html
          git add . 添加所有文件
          git reset HEAD 要移除的文件    移除缓存区
+         git reset HEAD .    移除全部缓存区
      -->
      <h1>h1标题</h1>
      <script src="./index.js"></script>
