--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
          git add . 添加所有文件
          git reset HEAD 要移除的文件    移除缓存区
          git reset HEAD .    移除全部缓存区
+
+        从git仓库和工作区同时移除 index.js文件
+        git rm -f index.js
+        
+        只从git仓库中移除index.css,但保留工作区index.css文件
+        git rm --cached index.css
      -->
      <h1>h1标题</h1>
      <script src="./index.js"></script>
