--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
 
         从git仓库和工作区同时移除 index.js文件
         git rm -f index.js
-        
+
         只从git仓库中移除index.css,但保留工作区index.css文件
         git rm --cached index.css
+
+        git log     历史提交
+        git log -2   最近两条提交
      -->
      <h1>h1标题</h1>
      <script src="./index.js"></script>
