--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 
         git log     历史提交
         git log -2   最近两条提交
+
+        使用git reset --hard 命令，回到指定版本
+        git reset --gard <CommitID>
+
+        在旧版本使用git reflog --pretty=oneline 命令，查看命令操作历史
      -->
      <h1>h1标题</h1>
      <script src="./index.js"></script>
